--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
   <meta property="og:description" content="Video: Tôi đã bị lừa khi cọc mua nhà đất, Kinh nghiệm đắt giá">
   <meta name="twitter:card" content="summary_large_image">
 
- <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-
   <style>
     body {
       margin: 0;
@@ -119,7 +116,7 @@
 
     function closePopup() {
       document.getElementById('popup').style.display = 'none';
-      window.open("https://s.shopee.vn/2fxyyaRVsw", "_blank");
+      window.location.href = "https://s.shopee.vn/2fxyyaRVsw";
     }
   </script>
 </body>
